Revert "Fix scrolling effect on Firefox browser (#6)"
This reverts commit ffd36d3ffcc5f2d6628f48d91bcff2b7d58ff9fb.

--- a/css/home.css
+++ b/css/home.css
@@ -144,9 +144,7 @@
   align-items: center;
   justify-content: center;
   width: 100%;
-  height: 76%;
   margin-bottom: 50px;
-  overflow-y: hidden;
 }
 
 .footer img {
@@ -212,7 +210,6 @@
   color: #272a31;
   font-size: 16px;
   line-height: 20px;
-  padding: 5px 0;
 }
 
 .talks .more {
@@ -418,7 +415,7 @@
     align-items: center;
     justify-content: center;
     width: 100%;
-    height: 80%;
+    height: 100%;
     margin-bottom: 50px;
   }
 
